fixed text-overflow and added mailto href link

--- a/docs/css/style.scss
+++ b/docs/css/style.scss
@@ -79,17 +79,6 @@ $title-font: "Shrikhand";
   }
 }
 
-@keyframes slide-in-left {
-  0% {
-    transform: translateX(5px);
-  }
-
-  100% {
-    transform: translateX(0px);
-  }
-}
-
-
 //start of the mobile css
 * {
   box-sizing: border-box;
@@ -544,19 +533,17 @@ svg {
   flex-flow: row nowrap;
   &:hover {
     .menu__price{
-     text-indent: -40px;
-      //  width: 3%;
+     text-indent: -30px;
      transition: text-indent .3s linear;
     }
-    
     .check {
       width: 20%;
       visibility: visible;
       opacity: 1;
       transition: opacity .3s, visibility .3s, width .3s linear;
-      animation: slide-in-left .3s ease-in-out backwards;
       & i {
         opacity: 1;
+        animation: loading 0.3s linear;
       }
       
     }
@@ -566,7 +553,7 @@ svg {
 
 // styling for menu styling
 .menu__description {
-  display: block;
+  display:inline-block;
   width: 88%;
   padding-left: 0px;
   padding-top: 0;
@@ -574,11 +561,16 @@ svg {
     padding-left: 12px;
   }
   & .menu__item {
-    font-size: 26px;
+    font-size: 25px;
     margin-top: 20px;
   }
   & .menu__ingredients {
+    width: 90%;
     font-size: 23px;
+    padding-bottom: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 
@@ -591,8 +583,8 @@ svg {
   justify-self: center;
   position: relative;
   top: 22px;
-  text-indent: 0;
-  // transition: text-indent 0.4s linear;
+  text-overflow: ellipsis;
+
 }
 
 // styling for menu check and animation
@@ -613,7 +605,6 @@ svg {
     height: auto;
     font-size: 35px;
     font-weight: 900;
-    // padding-top: 35px;
     color: white;
     opacity: 0;
     transition: opacity 0.2s linear;
